--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,18 +1,8 @@
-buildscript {
-    repositories {
-    }
-
-    dependencies {
-
-    }
-}
 apply plugin: 'com.android.application'
-
-repositories {
-    maven { url 'http://dl.bintray.com/lukaville/maven' }
-}
+apply plugin: 'com.google.gms.google-services'
 
 android {
+    namespace 'in.co.gorest.grblcontroller'
     compileSdkVersion 33
     buildToolsVersion '29.0.3'
 
@@ -40,6 +30,7 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
+
     dataBinding {
         enabled = true
     }
@@ -48,24 +39,16 @@ android {
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
     }
-    namespace 'in.co.gorest.grblcontroller'
 }
 
-allprojects {
-    repositories {
-        google()
-        mavenCentral()
-        maven { url "https://www.jitpack.io" }
-    }
+repositories {
+    maven { url 'http://dl.bintray.com/lukaville/maven' }
 }
 
 dependencies {
     implementation fileTree(include: ['*.jar'], dir: 'libs')
     implementation 'com.google.firebase:firebase-core:21.1.1'
     implementation 'com.google.firebase:firebase-messaging:23.1.1'
-    androidTestImplementation('androidx.test.espresso:espresso-core:3.3.0', {
-        exclude group: 'com.android.support', module: 'support-annotations'
-    })
 
     implementation 'androidx.appcompat:appcompat:1.6.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
@@ -83,9 +66,6 @@ dependencies {
     implementation 'com.github.satyan:sugar:1.5'
     implementation 'com.github.GrenderG:Toasty:1.5.2'
 
-    annotationProcessor 'androidx.databinding:databinding-compiler:7.4.0'
-
     testImplementation 'junit:junit:4.13.2'
+    androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
 }
-
-apply plugin: 'com.google.gms.google-services'
