--- a/build.gradle
+++ b/build.gradle
@@ -1,13 +1,12 @@
-// Top-level build file where you can add configuration options common to all sub-projects/modules.
-
+// Root-level build.gradle
 buildscript {
     repositories {
         google()
         mavenCentral()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:4.2.2'
-        classpath 'com.google.gms:google-services:4.3.14'
+        classpath 'com.android.tools.build:gradle:8.5.0'
+        classpath 'com.google.gms:google-services:4.4.2'
     }
 }
 
@@ -15,9 +14,7 @@ allprojects {
     repositories {
         google()
         mavenCentral()
-        maven { url "https://jitpack.io" }
-        maven { url 'https://maven.google.com/' }
-
+        maven { url "https://www.jitpack.io" }
     }
 }
 
