--- a/build.gradle
+++ b/build.gradle
@@ -1,12 +1,13 @@
-// Root-level build.gradle
+// root build.gradle
 buildscript {
     repositories {
         google()
         mavenCentral()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:8.5.0'
-        classpath 'com.google.gms:google-services:4.4.2'
+        // gunakan AGP 7.4.2 (stabil untuk compileSdk 33)
+        classpath 'com.android.tools.build:gradle:7.4.2'
+        classpath 'com.google.gms:google-services:4.4.0' // jika pakai google services
     }
 }
 
