--- a/settings.gradle
+++ b/settings.gradle
@@ -1,1 +1,10 @@
+pluginManagement {
+    repositories {
+        gradlePluginPortal()
+        google()
+        mavenCentral()
+    }
+}
+
+rootProject.name = "Grbl-controller-"
 include ':app'
