--- a/.github/workflows/android-build.yml
+++ b/.github/workflows/android-build.yml
@@ -20,28 +20,25 @@ jobs:
           distribution: temurin
           java-version: '11'
 
-      - name: Ensure Gradle wrapper exists (create if missing)
+      - name: Make gradlew executable (if present)
         run: |
-          if [ ! -f ./gradlew ]; then
-            echo "Gradle wrapper not found — creating one (gradle 7.5)..."
-            # Install a minimal gradle bootstrap if system gradle missing
-            # Use sdkman or apt only if necessary; attempt to run wrapper creation via sdkman not required in Actions usually.
-            # Instead, download gradle wrapper files from Gradle distribution (light approach)
-            ./gradlew --version || true
+          if [ -f ./gradlew ]; then
+            chmod +x ./gradlew
           fi
-          chmod +x ./gradlew || true
-
-      - name: Grant execute permission for Gradlew
-        run: chmod +x ./gradlew
 
       - name: Build Debug APK
         env:
           JAVA_TOOL_OPTIONS: "-Dfile.encoding=UTF8"
         run: |
-          ./gradlew --no-daemon -Pandroid.injected.testOnly=false assembleDebug --stacktrace
+          if [ -f ./gradlew ]; then
+            ./gradlew --no-daemon -Pandroid.injected.testOnly=false assembleDebug --stacktrace
+          else
+            echo "gradlew not found. Please add Gradle wrapper to the repo (gradlew, gradlew.bat, gradle/wrapper/*)."
+            exit 1
+          fi
 
       - name: Upload Debug APK
         uses: actions/upload-artifact@v4
         with:
           name: GrblHAL-Android-STM32
-          path: app/build/outputs/apk/debug/app-debug.apk          path: app/build/outputs/apk/debug/app-debug.apk
+          path: app/build/outputs/apk/debug/app-debug.apk
