--- a/.github/workflows/android-build.yml
+++ b/.github/workflows/android-build.yml
@@ -1,40 +1,42 @@
-name: Build Android APK (grblHAL STM32 Support)
+name: Android Build
 
 on:
   push:
-    branches: [ main ]
+    branches: [ "main" ]
   pull_request:
+    branches: [ "main" ]
 
 jobs:
   build:
     runs-on: ubuntu-latest
-    timeout-minutes: 30
-
     steps:
-      - name: Checkout repository
+      - name: Checkout
         uses: actions/checkout@v4
 
-      - name: Set up JDK 11
+      - name: Setup JDK
         uses: actions/setup-java@v4
         with:
           distribution: temurin
-          java-version: '11'
+          java-version: 11
 
-      - name: Make gradlew executable (if present)
-        run: |
-          if [ -f ./gradlew ]; then
-            chmod +x ./gradlew
-          fi
+      - name: Cache Gradle dependencies
+        uses: actions/cache@v4
+        with:
+          path: |
+            ~/.gradle/caches
+            ~/.gradle/wrapper
+          key: ${{ runner.os }}-gradle-${{ hashFiles('**/*.gradle*', '**/gradle-wrapper.properties') }}
+          restore-keys: |
+            ${{ runner.os }}-gradle-
 
-      - name: Build Debug APK (capture log)
-        run: |
-          chmod +x ./gradlew
-          ./gradlew --no-daemon assembleDebug --stacktrace --info > gradle-output.log 2>&1 || true
-          echo "==== TAIL OF gradle-output.log ===="
-          tail -n 200 gradle-output.log || true
+      - name: Build Debug APK
+        run: ./gradlew assembleDebug --stacktrace --info
 
-      - name: Upload gradle-output log
+      - name: Upload Debug APK
         uses: actions/upload-artifact@v4
+        with:
+          name: GrblHAL-STM32-Android
+          path: app/build/outputs/apk/debug/app-debug.apk        uses: actions/upload-artifact@v4
         with:
           name: gradle-log
           path: gradle-output.log
