--- a/.github/workflows/android-build.yml
+++ b/.github/workflows/android-build.yml
@@ -9,18 +9,19 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
+    timeout-minutes: 60
 
     steps:
       - name: Checkout
         uses: actions/checkout@v4
 
-      - name: Setup JDK
+      - name: Setup JDK 11
         uses: actions/setup-java@v4
         with:
           distribution: temurin
           java-version: 11
 
-      - name: Cache Gradle dependencies
+      - name: Cache Gradle
         uses: actions/cache@v4
         with:
           path: |
@@ -30,8 +31,22 @@ jobs:
           restore-keys: |
             ${{ runner.os }}-gradle-
 
-      - name: Build Debug APK
-        run: ./gradlew assembleDebug --stacktrace --info
+      - name: Make gradlew executable
+        run: |
+          if [ -f ./gradlew ]; then
+            chmod +x ./gradlew
+          fi
+
+      - name: Build Debug APK (capture log)
+        run: |
+          if [ -f ./gradlew ]; then
+            ./gradlew --no-daemon assembleDebug --stacktrace --info > gradle-output.log 2>&1 || true
+          else
+            echo "gradlew not found - please commit Gradle wrapper files (gradlew, gradlew.bat, gradle/wrapper/*)"
+            exit 1
+          fi
+          echo "==== tail of gradle-output.log ===="
+          tail -n 200 gradle-output.log || true
 
       - name: Upload Gradle Log
         uses: actions/upload-artifact@v4
@@ -39,21 +54,20 @@ jobs:
           name: gradle-log
           path: gradle-output.log
 
-      - name: Upload Debug APK
+      - name: Ensure APK exists and rename (if present)
+        run: |
+          APK_PATH="app/build/outputs/apk/debug/app-debug.apk"
+          if [ -f "$APK_PATH" ]; then
+            mkdir -p artifacts
+            cp "$APK_PATH" artifacts/GrblHAL-STM32-app-debug.apk
+            echo "APK found and copied to artifacts/GrblHAL-STM32-app-debug.apk"
+          else
+            echo "APK not found at $APK_PATH"
+          fi
+
+      - name: Upload Debug APK (if present)
         uses: actions/upload-artifact@v4
         with:
-          name: GrblHAL-Android-STM32
-          path: app/build/outputs/apk/debug/app-debug.apk        with:
-          name: GrblHAL-STM32-Android
-          path: app/build/outputs/apk/debug/app-debug.apk        uses: actions/upload-artifact@v4
-        with:
-          name: gradle-log
-          path: gradle-output.log
-
-      - name: Upload Debug APK
-        uses: actions/upload-artifact@v4
-        with:
-          name: GrblHAL-Android-STM32
-          path: app/build/outputs/apk/debug/app-debug.apk
-
-          
+          name: GrblHAL-STM32-APK
+          path: artifacts/GrblHAL-STM32-app-debug.apk
+          if-no-files-found: warn
