--- a/build.gradle
+++ b/build.gradle
@@ -5,10 +5,10 @@ buildscript {
         mavenCentral()
     }
     dependencies {
-        // Versi plugin Android stabil untuk Gradle 7.5
-        classpath 'com.android.tools.build:gradle:7.4.2'
-        // Jika kamu pakai Firebase atau Google Services, ini opsional
-        classpath 'com.google.gms:google-services:4.4.0'
+        dependencies {
+    classpath 'com.android.tools.build:gradle:8.1.0'
+    // ... other classpath dependencies
+        }
     }
 }
 
